# dill

./: CMakeLists.txt  package.xml  setup.py
dill/: info.py
tests/: test_classdef.py  test_detect.py  test_diff.py  test_extendpickle.py  test_file.py  test_functors.py  test_module.py  test_nested.py  test_objects.py  test_properties.py  test_source.py  test_temp.py  test_weakref.py
